--- a/client/produit.html
+++ b/client/produit.html
@@ -4,7 +4,14 @@
     <div class="input-group mb-3">
       <input type="search" class="form-control" placeholder="search">
       <span class="input-group-text"><i class="bi-search"></i></span>
-      <script src="scripts/produit.js"></script>
+        <a href="#/panier" class="">
+            <button type="button" class="btn btn-primary position-relative">
+
+                <i class="bi bi-cart-plus"></i>
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"id="item_counter">0
+                </span>
+            </button>
+        </a>
     </div>
   </div>
 </div>
